[gd_scene load_steps=22 format=1]

[ext_resource path="res://scripts/main_menu.gd" type="Script" id=1]
[ext_resource path="res://sprites/button.png" type="Texture" id=2]
[ext_resource path="res://sprites/button_select.png" type="Texture" id=3]
[ext_resource path="res://fonts/sunn.fnt" type="BitmapFont" id=4]
[ext_resource path="res://sprites/background.png" type="Texture" id=5]
[ext_resource path="res://scenes/star.tscn" type="PackedScene" id=6]
[ext_resource path="res://sprites/mous_sprite_sheet.png" type="Texture" id=7]
[ext_resource path="res://fonts/sunn - title.fnt" type="BitmapFont" id=8]

[sub_resource type="StyleBoxTexture" id=1]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=2]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=3]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=4]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=5]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=6]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=7]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=8]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="StyleBoxTexture" id=9]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=10]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 2 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxTexture" id=11]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0
texture = ExtResource( 3 )
margin/left = 0.0
margin/right = 0.0
margin/top = 0.0
margin/bottom = 0.0
expand_margin/left = 0.0
expand_margin/right = 0.0
expand_margin/top = 0.0
expand_margin/bottom = 0.0
draw_center = true

[sub_resource type="StyleBoxEmpty" id=12]

content_margin/left = -1.0
content_margin/right = -1.0
content_margin/top = -1.0
content_margin/bottom = -1.0

[sub_resource type="Animation" id=13]

length = 6.0
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath(".:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 6 ),
"transitions": FloatArray( 1, 1 ),
"update": 0,
"values": [ 0.0, 360.0 ]
}

[node name="main_menu" type="Control"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 40.0
margin/bottom = 40.0
script/script = ExtResource( 1 )

[node name="GridContainer" type="GridContainer" parent="."]

rect/scale = Vector2( 2, 2 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 373.0
margin/top = 163.0
margin/right = 505.0
margin/bottom = 255.0
custom_constants/vseparation = 10
custom_constants/hseparation = 10
columns = 2

[node name="start" type="Button" parent="GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 68.0
margin/bottom = 41.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 3 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false

[node name="score" type="Button" parent="GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 78.0
margin/top = 0.0
margin/right = 132.0
margin/bottom = 41.0
custom_styles/hover = SubResource( 1 )
custom_styles/pressed = SubResource( 2 )
custom_styles/focus = SubResource( 5 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Score"
flat = false

[node name="credits" type="Button" parent="GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 51.0
margin/right = 68.0
margin/bottom = 92.0
custom_styles/hover = SubResource( 6 )
custom_styles/pressed = SubResource( 7 )
custom_styles/focus = SubResource( 8 )
custom_styles/normal = SubResource( 9 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color_disabled = Color( 0, 0, 0, 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Credits"
flat = false

[node name="quit" type="Button" parent="GridContainer"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 78.0
margin/top = 51.0
margin/right = 132.0
margin/bottom = 92.0
custom_styles/hover = SubResource( 10 )
custom_styles/pressed = SubResource( 11 )
custom_styles/focus = SubResource( 12 )
custom_styles/normal = SubResource( 4 )
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
custom_colors/font_color_hover = Color( 0, 0, 0, 1 )
custom_colors/font_color_pressed = Color( 0, 0, 0, 1 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false

[node name="background" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 512.018, 301.52 )
transform/scale = Vector2( 1.00505, 0.593032 )
z/z = -3
texture = ExtResource( 5 )
__meta__ = {
"_edit_lock_": true
}

[node name="star" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -363.814, 250.489 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star1" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 422.753, -386.787 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star2" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -147.819, -340.282 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star3" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -450.47, -173.519 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star4" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -377.106, -281.656 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star5" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 333.74, 109.472 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star6" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 317.34, 369.723 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star7" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 362.067, 192.854 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star8" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 283.049, 172.64 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star9" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 335.23, 233.281 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star10" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 337.656, -244.839 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star11" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -213.418, 430.364 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star12" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( 151.851, -373.129 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star13" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -286.254, -377.599 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="star14" parent="background" instance=ExtResource( 6 )]

transform/pos = Vector2( -362.508, -29.4968 )
transform/scale = Vector2( 1.97816, 3.35251 )

[node name="moon_sprite" type="Sprite" parent="."]

editor/display_folded = true
transform/pos = Vector2( 500.029, 470.244 )
transform/scale = Vector2( 0.517149, 0.517149 )
texture = ExtResource( 7 )
region = true
region_rect = Rect2( 4, 633, 380, 386 )

[node name="moon_credit_animation" type="AnimationPlayer" parent="moon_sprite"]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/moon_credit = SubResource( 13 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "moon_credit"

[node name="tittle" type="Node2D" parent="."]

transform/pos = Vector2( 442.28, 114.883 )
transform/scale = Vector2( 1.13374, 1.24633 )

[node name="tittle_text" type="Label" parent="tittle"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = -62.0
margin/top = -49.0
margin/right = 177.0
margin/bottom = 13.0
custom_fonts/font = ExtResource( 8 )
custom_colors/font_color = Color( 1, 0.901961, 0.501961, 1 )
text = "Moon Cheeser"
align = 1
uppercase = true
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[connection signal="pressed" from="GridContainer/start" to="." method="_on_Button_pressed"]

[connection signal="pressed" from="GridContainer/score" to="." method="_on_score_pressed"]

[connection signal="pressed" from="GridContainer/credits" to="." method="_on_credits_pressed"]

[connection signal="pressed" from="GridContainer/quit" to="." method="_on_quit_pressed"]


